# perception_spinnaker_vision

./: .gitignore  README.md
resources/: h264.sdp.txt
spinnaker_driver/: CMakeLists.txt  package.xml
spinnaker_driver/apps/: gigev_acquisition.cpp  image_capture.hpp  machine_vision_streaming.cpp  machine_vision_streaming.hpp
spinnaker_driver/cmake/: FindSpinnaker.cmake  Findspinnaker_driver.cmake
spinnaker_driver/include/spinnaker_driver/: spinnaker_driver.hpp
spinnaker_driver/src/: gigev_acquisition.cpp  spinnaker_driver.cpp
spinnaker_perception_apps/: CMakeLists.txt  package.xml
spinnaker_perception_apps/cmake/: FindGLIB2.cmake  FindGStreamer.cmake
spinnaker_perception_apps/include/spinnaker_perception_apps/: image_capture.hpp  machine_vision_streaming.hpp  vision_streaming.hpp
spinnaker_perception_apps/src/: gigev_config.cpp  machine_vision_streaming.cpp
spinnaker_ros2/: CMakeLists.txt  package.xml
spinnaker_ros2/include/spinnaker_ros2/: apriltag_pose_estimate.hpp  chessboard_pose_estimate.hpp  spinnaker_ros2.hpp
spinnaker_ros2/src/: apriltag_pose_estimate.cpp  chessboard_pose_estimate.cpp  spinnaker_ros2.cpp
